# Cody

./: .cargo-watch-ignore  .clippy.toml  .gitignore  .todo_clippy.json  .todo_performance.json  AVX_SIMD_IMPLEMENTATION.md  CODE_CHANGES.md  COMPLETED.md  Cargo.toml  DOCUMENTATION_REVIEW.md  DUAL_MODE_TESTING.md  ELOGAIN_DELIVERY.md  ELOGAIN_QUICKSTART.md  EXECUTION_GUIDE.md  HARDWARE_OPTIMIZATION_GUIDE.md  HIGH_PERFORMANCE_OPTIMIZATIONS.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  ORCHESTRATION_FIX_SUMMARY.md  ORCHESTRATION_SUMMARY.md  PERFORMANCE_CRITICAL_FUNCTIONS.md  PERFORMANCE_PHASE_IMPLEMENTATION.md  PERFORMANCE_STRATEGIES.md  PERFT.md  PERFT_IMPL.md  PERFT_USAGE.md  PRODUCTION_CHECKLIST.md  QUICKREF.md  QUICK_REFERENCE_CARD.md  QUICK_START_OPTIMIZATION.md  README.md  README_ORCHESTRATION_FIX.md  REPAIR_RECOVERY_IMPLEMENTATION.md  ROADMAP.md  RYZEN_OPTIMIZATION_CHECKLIST.md  SEE_IMPLEMENTATION_GUIDE.md  START_HERE.md  THREADING_STATUS.md  TODO.md  TODO_CLIPPY.md  TODO_PERFORMANCE.md  (+28 more)
engine/: Cargo.toml
engine/benches/: bench.rs
engine/src/: api.rs  engine_consts.rs  lib.rs  main.rs  perft_integration_test.rs  test_data.rs  util.rs
engine/src/api/: golimits.rs  mod.rs  uciapi.rs  uciapi_test.rs
engine/src/core/: arena.rs  bitboardmask.rs  castling.rs  mod.rs  mov.rs  node.rs  occupancy.rs  piece.rs  position.rs  tt.rs
engine/src/nnue/: accumulator.rs  features.rs  mod.rs  network.rs  update.rs
engine/src/search/: core.rs  engine.rs  evaluator.rs  mod.rs  (+7 more)
engine/tests/: test_alignment.rs  test_draw_adjudication.rs  test_eval_perspective.rs  test_illegal_move_h4a6.rs  test_krk_endgame.rs  test_move_bug.rs  test_move_sequence_bug.rs  test_pst_evaluation.rs  test_quiescence_enhancements.rs  test_tablebase.rs  test_uci_commands.rs
(+198 files in other folders)
