[workspace]
members = [
  "bitboard",
  "engine",
]
resolver = "3"

[profile.release]
opt-level = 3            # Maximum optimization
lto = "fat"              # Link Time Optimization across crates
codegen-units = 1        # Better optimization, slower compile
panic = "abort"          # Removes unwinding code
strip = true             # Removes debug symbols from final binary
target-cpu = "native"
debug = false

[profile.bench]
inherits = "release"

