[workspace]
members = [
  "bitboard",
  "engine",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 1              # Keep debug builds fast to compile
debug = true               # Keep debug symbols

[profile.bench]
inherits = "release"

