[workspace]
members = [
  "bitboard",
  "engine",
]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false
overflow-checks = false
incremental = false
debug = "line-tables-only"

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
inherits = "release"
# ADDED: This ensures that when you run 'cargo bench', 
# the profiler can see the internal function names.
debug = true