[package]
name = "engine"
version = "2.0.1"
edition = "2024"

[[bin]]
name = "cody"
path = "src/main.rs"

[dependencies]
bitboard = { path = "../bitboard" }
once_cell = "1.21.3"
rand = "0.10.0"
rayon = "1.11.0"
time = "0.3.47"
humantime = "2.3.0"
rustc-hash = "2.1.1"
smallvec = "1.13"
shakmaty = "0.30.0"
shakmaty-syzygy = "0.28.0"

[[bench]]
name = "bench"
harness = false
